# Back-Professor-Recommendation-System

./: .env  .gitignore  BaseDeDatos.cypher  README.md  Recomendaciones.py  pyproject.toml  requisitos.txt
scripts/: init_db.py
src/: config.py  main.py
src/api/: rutas.py  rutas_cursos.py  rutas_estudiantes.py  rutas_profesores.py
src/database/: neo4jdriver.py
src/models/: curso.py  estudiante.py  profesor.py
src/services/: algoritmo_de_recomendacion.py  algoritmo_estudiante.py  algoritmo_profesor.py
src/utils/: helpers.py
