[project]
name = "back-professor-recommendation-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcelo Detlefsen",email = "83415711+MarceloDetlefsen@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "back_professor_recommendation_system", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
